--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 <body>
   <div class="header w">
-    学成在线
+    <div class="logo">
+        <img src="img/logo.png" alt="logo">
+    </div>
+      <div class="nav">
+          <ul>
+              <li><a href="#">首页</a></li>
+              <li><a href="#">课程</a></li>
+              <li><a href="#">职业规划</a></li>
+          </ul>
+      </div>
   </div>
 </body>
 </html>
