--- a/index.html
+++ b/index.html
@@ -6,17 +6,64 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="header w">
-    <div class="logo">
-        <img src="img/logo.png" alt="logo">
-    </div>
-      <div class="nav">
-          <ul>
-              <li><a href="#">首页</a></li>
-              <li><a href="#">课程</a></li>
-              <li><a href="#">职业规划</a></li>
-          </ul>
+<!--  header区域-->
+    <div class="header w">
+        <div class="logo">
+            <img src="img/logo.png" alt="logo">
+        </div>
+          <div class="nav">
+              <ul>
+                  <li><a href="#">首页</a></li>
+                  <li><a href="#">课程</a></li>
+                  <li><a href="#">职业规划</a></li>
+              </ul>
+          </div>
+          <div class="search">
+              <input type="text" placeholder="请输入关键词">
+              <button></button>
+          </div>
+          <div class="avatar">
+              <img src="img/user.png">
+              <!--<span>Akokko</span>-->
+              Akokko
+          </div>
       </div>
-  </div>
+<!--banner区域-->
+    <div class="banner">
+<!--        版心-->
+        <div class="w">
+            <div class="subnav">
+                <ul>
+                    <li>
+                        <a href="#">前端开发<span> &gt; </span> </a>
+                    </li>
+                    <li>
+                        <a href="#">前端开发<span> &gt; </span> </a>
+                    </li>
+                    <li>
+                        <a href="#">前端开发<span> &gt; </span> </a>
+                    </li>
+                    <li>
+                        <a href="#">前端开发<span> &gt; </span> </a>
+                    </li>
+                    <li>
+                        <a href="#">前端开发<span> &gt; </span> </a>
+                    </li>
+                    <li>
+                        <a href="#">前端开发<span> &gt; </span> </a>
+                    </li>
+                    <li>
+                        <a href="#">前端开发<span> &gt; </span> </a>
+                    </li>
+                    <li>
+                        <a href="#">前端开发<span> &gt; </span> </a>
+                    </li>
+                    <li>
+                        <a href="#">前端开发<span> &gt; </span> </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
