finish some area

--- a/index.html
+++ b/index.html
@@ -63,6 +63,59 @@
                     </li>
                 </ul>
             </div>
+            <div class="course">
+                <h2>我的课程表</h2>
+                <div class="bd">
+                    <ul>
+                        <li>
+                            <h4>继续学习 程序语言设计</h4>
+                            <p>正在学习-使用对象</p>
+                        </li>
+                        <li>
+                            <h4>继续学习 程序语言设计</h4>
+                            <p>正在学习-使用对象</p>
+                        </li>
+                        <li>
+                            <h4>继续学习 程序语言设计</h4>
+                            <p>正在学习-使用对象</p>
+                        </li>
+                    </ul>
+                    <a href="#">全部课程</a>
+                </div>
+            </div>
+        </div>
+    </div>
+<!--推荐商品-->
+    <div class="goods w">
+        <h3>精品推荐</h3>
+        <ul>
+            <li><a class="goods-item" href="#">jQuery</a></li>
+            <li><a class="goods-item" href="#">jQuery</a></li>
+            <li><a class="goods-item" href="#">jQuery</a></li>
+            <li><a class="goods-item" href="#">jQuery</a></li>
+            <li><a class="goods-item" href="#">jQuery</a></li>
+        </ul>
+        <a class="mod" href="#">修改推荐</a>
+    </div>
+<!--课程区域-->
+    <div class="box w">
+        <div class="box-hd">
+            <h3>课程推荐</h3>
+            <a href="#">查看全部</a>
+        </div>
+        <div class="box-bd">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
     </div>
 </body>
